[project]
name = "avl-core"
version = "0.2.0"
description = "Apheleia Verification Library. A set of Python base classes for efficient HDL verification."
authors = [{name = "avl", email = "avl@projectapheleia.net"}]
maintainers = [{name = "avl", email = "avl@projectapheleia.net"}]
keyword = ["hdl", "verification", "UVM"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "cocotb>=1.9.1",
    "z3-solver>=4.15.0.0",
    "pandas>=2.2.3",
    "pyyml>=0.0.2",
    "tabulate>=0.9.0",
    "graphviz>=0.20.3",
    "anytree>=2.13.0",
    "bincopy>=20.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=0.910",
    "black>=22.3.0",
    "matplotlib>=3.10.0",
    "sphinx>=8.1.3",
    "sphinx_rtd_theme>=3.0.2",
    "ruff>=0.11.0"
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "avl" }]

[tool.ruff]
target-version = "py310"

src = ["avl", "examples", "bin"]

select = ["E", "F", "B", "I", "UP", "C90"]

exclude = ["doc", "build", "dist", "venv"]

line-length = 200

fix = false

[tool.ruff.mccabe]
max-complexity = 30

[project.scripts]
avl-trace-analysis = "avl.tools.trace_analysis:main"
